--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,31 @@
-html, body {
-  height: 100%;
-}
-
-body {
+body { 
+  margin:0; 
+  padding:0; 
   background-color: #000;
-  margin: 0;
-  font-family: Helvetica, sans-serif;;
-  overflow: hidden;
 }
-
-a, p, h3, h6 {
+button {
   color: #fff;
   background: transparent;
+  outline: 1px solid rgba(48,103,145,.75);
+  border: 0px;
+  padding: 5px 10px;
+  cursor: pointer;
 }
-
-h5 {
-  color: #fff;
-  padding-top: 35px;
+button:hover {
+  background-color: rgba(48,103,145,.5);
 }
-
-.axis path {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 1px;
-  shape-rendering: crispEdges;
+button:active {
+  color: #000000;
+  background-color: rgba(48,103,145,.75);
 }
-
-.axis line {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 1px;
-  shape-rendering: crispEdges;
-}
-
-.legendText, .axis text {
-  font-size: 8px;
-  fill: #fff;
+.mapDiv { 
+  border: 10px solid rgba(255,255,255,.75);
+  border-radius: 6px;
+  position: absolute; 
+  top: 0; 
+  bottom: 0; 
+  width: 800px;
+  height: 500px;
 }
 
 #loading {
@@ -62,102 +52,4 @@ h5 {
   bottom: 20px;
   width: 100%;
   text-align: center;
-}
-
-@media (max-width: 767px) {
-  #icons {
-    position:absolute;
-    width:200px;
-    height:50px;
-    bottom:50px;
-    right:25%;
-    left:50%;
-    margin-left:-80px;
-  }
-}
-
-@media (min-width: 768px) {
-  #icons {
-    position: absolute;
-    bottom: 20px;
-    left: 0px;
-  }
-}
-
-.dataPoint {
-  fill: orange;
-  stroke: none;
-}
-
-.dataPoint:hover{
-  stroke: white;
-  stroke-width: 2px;
-}
-
-.element {
-  width: 230px;
-  height: 160px;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(48,103,145,.75);
-  border: 2px solid rgba(127,255,255,0.25);
-  border-radius: 8px;
-  text-align: center;
-  cursor: default;
-}
-
-.element:hover {
-  box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
-  border: 1px solid rgba(127,255,255,0.75);
-}
-
-.element svg {
-  position: absolute;
-  top: 20px;
-  left: 2px;
-  right: 0px;
-}
-
-.element .investData {
-  position: absolute;
-  top: 35px;
-  left: 0px;
-  right: 0px;
-  font-size: 40px;
-  color: rgba(255,255,255,0.75);
-}
-
-.element .investLabel {
-  position: absolute;
-  top: 76px;
-  left: 12px;
-  right: 0px;
-  font-size: 8px;
-  color: rgba(255,255,255,0.75);
-}
-
-.element .chartTitle {
-  position: absolute;
-  top: 5px;
-  left: 0px;
-  right: 0px;
-  font-size: 12px;
-  color: rgba(127,255,255,0.75);
-}
-
-button {
-  color: #fff;
-  background: transparent;
-  outline: 1px solid rgba(48,103,145,.75);
-  border: 0px;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: rgba(48,103,145,.5);
-}
-button:active {
-  color: #000000;
-  background-color: rgba(48,103,145,.75);
 }
