--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,23 @@ button:active {
   width: 100%;
   text-align: center;
 }
+
+@media (max-width: 767px) {
+  #icons {
+    position:absolute;
+    width:200px;
+    height:50px;
+    bottom:50px;
+    right:25%;
+    left:50%;
+    margin-left:-80px;
+  }
+}
+
+@media (min-width: 768px) {
+  #icons {
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+  }
+}
