--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ button:active {
   background-color: rgba(48,103,145,.75);
 }
 
+path {
+  fill: tomato;
+}
+
 .map-legend .swatch {
   width:20px;
   height:20px;
