--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body { /* From https://github.com/Famous/core/blob/master/famous.css */
 }
 
 a, p, h3, h6 {
-  color: #fff;
+  color: #000;
   background: transparent;
 }
 
@@ -73,15 +73,33 @@ button:active {
   border: 10px solid rgba(255,255,255,.75);
   border-radius: 6px;
   width: 800px;
-  height: 500px;
+  height: 540px;
 }
 
 .map-div .map-title {
   position: absolute;
-  top: 10px;
+  top: 0px;
   left: 10px;
   right: 0px;
   font-size: 30px;
+  color: rgba(255,255,255,0.75);
+}
+
+.map-div .map-caption {
+  position: absolute;
+  top: 490px;
+  left: 10px;
+  right: 0px;
+  font-size: 40px;
+  color: rgba(255,255,255,0.75);
+}
+
+.map-div .map-rollover {
+  position: absolute;
+  top: 500px;
+  left: 500px;
+  right: 0px;
+  font-size: 25px;
   color: rgba(255,255,255,0.75);
 }
 
