--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ button:active {
   color: rgba(255,255,255,0.75);
 }
 
-.map-div .map-svg {
+.map-div .map-container {
   position: absolute;
   top: 50px;
   left: 0px;
@@ -131,14 +131,6 @@ button:active {
 
 path:hover {
   opacity: .6;
-}
-
-path {
-  fill: tomato;
-  stroke: black;
-  stroke-width: 1px;
-  -webkit-backface-visibility:hidden;
-  backface-visibility:hidden;  
 }
 
 .leaflet-map-pane {
