--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html { /* From https://github.com/Famous/core/blob/master/famous.css */
 
 body { /* From https://github.com/Famous/core/blob/master/famous.css */
     width: 100%;
+    font-family: helvetica, arial, sans-serif;
     background-image:url('img/dark_fish_skin.png');
     position: absolute;
     width: 100%;
@@ -33,14 +34,9 @@ path:hover {
   opacity: .7;
 }
 
-a, p, h3, h6 {
+a, p, h2, h3, h4, h5, h6 {
   color: #fff;
   background: transparent;
-}
-
-h5 {
-  color: #fff;
-  padding-top: 35px;
 }
 
 button {
@@ -141,6 +137,10 @@ button:active {
   left: 0;
   right: 0;
   margin: auto;
+}
+
+#loading-text {
+  padding-top: 35px;
 }
 
 #intro {
